--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,16 +33,21 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.add.type.headers: false
     consumer:
       group-id: transactions-service
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring.json.trusted.packages: "*"
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     topics:
-      - user.updated
-      - user.deleted
+      - workspace.created
       - workspace.deleted
+      - category.created
+      - category.deleted
+      - account.created
+      - account.deleted
+      - tag.created
+      - tag.deleted
 
   security:
     oauth2:
